<resources>
    <string name="app_title">TrainBOARD</string>

    <string name="app_name">KotlinMPP</string>

    <string name="get_train_times">Get Train Times</string>
    <string name="departure_text">Select departure station:</string>
    <string name="arrival_text">Select destination:</string>

    <string name="departure_station_hint">Enter departure station…</string>
    <string name="arrival_station_hint">Enter destination station…</string>

    <string name="alert_title">Warning!</string>

    <string name="departure_time">Departs: %s</string>
    <string name="arrival_time">Arrives: %s</string>

    <string name="prices">Prices: Between £%.2f and £%.2f</string>
    <string name="single_price">Price: £%.2f</string>

    <string name="tickets_subtitle">Tickets for the %s train on %s.</string>

    <string name="ticket_type">Ticket type: %s</string>
    <string name="ticket_price">Price: £%.2f</string>
</resources>
