<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true"
        android:focusable="true"
        tools:context=".MainActivity">

    <ImageView
        android:id="@+id/main_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background"/>

    <TextView
            android:id="@+id/main_text"
            android:textSize="50sp"
            android:fontFamily="@font/title_font"
            android:textColor="@color/colorMainHeadings"
            android:layout_marginVertical="15dp"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/departure_text"
        android:textSize="20sp"
        android:fontFamily="@font/medium_font"
        android:textColor="@color/colorMainHeadings"
        android:layout_marginHorizontal="20dp"
        android:gravity="start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/departure_text"
        app:layout_constraintTop_toBottomOf="@id/main_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <AutoCompleteTextView
        android:id="@+id/departure_station"
        android:theme="@style/Autocomplete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5sp"
        android:layout_marginHorizontal="20sp"
        android:hint="@string/departure_station_hint"
        android:inputType="textNoSuggestions"
        android:fontFamily="@font/light_font"
        android:textSize="18sp"
        android:imeOptions="flagNoExtractUi"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/departure_text"/>

    <TextView
        android:id="@+id/arrival_text"
        android:textSize="20sp"
        android:fontFamily="@font/medium_font"
        android:textColor="@color/colorMainHeadings"
        android:layout_marginTop="15sp"
        android:layout_marginHorizontal="20dp"
        android:gravity="start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/arrival_text"
        app:layout_constraintTop_toBottomOf="@id/departure_station"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <AutoCompleteTextView
        android:id="@+id/arrival_station"
        android:theme="@style/Autocomplete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5sp"
        android:layout_marginHorizontal="20sp"
        android:hint="@string/arrival_station_hint"
        android:inputType="textNoSuggestions"
        android:fontFamily="@font/light_font"
        android:textSize="18sp"
        android:imeOptions="flagNoExtractUi"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/arrival_text"/>

    <Button
        android:id="@+id/get_times"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_train_times"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:fontFamily="@font/medium_font"
        android:textColor="@color/colorMainHeadings"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/arrival_station"
        android:onClick="buttonClick"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/get_times"
        app:layout_constraintBottom_toBottomOf="parent">
        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateTint="@color/colorHighlight"
            />

        <view class="androidx.recyclerview.widget.RecyclerView"
            android:id="@+id/journey_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
        </view>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>